# Haven

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Caddyfile  Cargo.toml  Dockerfile  README.md  SECURITY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  livekit.yaml  rust-backend-error
.claude/: settings.local.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  release.yml
client/: package-lock.json  package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
docs/: contributing.md  deployment.md  local-development.md  self-hosting-livekit.md  testing-guide.md
migrations/: 20250209000001_initial_schema.sql  20250210000001_add_indexes.sql  20250211000001_add_message_editing.sql  20250212000001_sender_keys.sql  20250213000001_reactions.sql  20250214000001_user_profiles_and_blocks.sql  20250215000001_channel_categories.sql  20250216000001_roles_and_permissions.sql  20250217000001_friends_and_dm_privacy.sql  20250218000001_bans.sql  20250219000001_messaging_features.sql  20250220000001_server_nicknames.sql  20250221000001_system_channel.sql  20250222000001_composite_indexes.sql  20250222000002_pending_totp.sql  20250223000001_encrypted_profiles.sql  20250224000001_partition_messages.sql  20250226000001_key_backups.sql  20250227000001_custom_emojis.sql  20250228000001_server_icon.sql  20250301000001_refresh_token_families.sql  20250302000001_member_timeouts.sql  20250302000002_audit_log.sql  20250303000001_read_states.sql  20250303000002_instance_admin.sql  20250304000001_registration_invites.sql  20250305000001_session_metadata.sql  20250305000002_reaction_sender_tokens.sql  20250306000001_private_channels.sql
migrations_sqlite/: 20250214000001_initial_schema.sql
src/: README.md  auth.rs  cache.rs  config.rs  crypto.rs  embedded_ui.rs  errors.rs  lib.rs  livekit_proc.rs  main.rs  memory_store.rs  models.rs  permissions.rs  pubsub.rs  storage.rs  tls.rs  ws.rs
src/api/: admin.rs  attachments.rs  auth_routes.rs  bans.rs  categories.rs  channels.rs  emojis.rs  friends.rs  gifs.rs  invites.rs  key_backup.rs  keys.rs  link_preview.rs  messages.rs  mod.rs  presence.rs  registration_invites.rs  reports.rs  roles.rs  sender_keys.rs  servers.rs  users.rs  voice.rs
src/db/: mod.rs  queries.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
tests/: api_tests.rs  ws_tests.rs
tests/common/: mod.rs
