[package]
name = "haven-backend"
version = "0.1.0"
edition = "2021"
description = "Haven — Privacy-first communication platform backend"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Auth & Crypto
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
totp-rs = { version = "5", features = ["qr", "gen_secret"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# AWS SDK for S3 (uncomment when deploying to production)
# aws-sdk-s3 = "1"
# aws-config = "1"
# aws-credential-types = "1"

# Local storage encryption (AES-256-GCM at rest)
aes-gcm = "0.10"
hmac = "0.12"
hex = "0.4"

# Misc
thiserror = "1"
anyhow = "1"
futures = "0.3"
dashmap = "5"
lazy_static = "1"
regex = "1"
sha2 = "0.10"

# HTTP client (link preview fetching)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
